--- a/feeds.toml
+++ b/feeds.toml
@@ -1,13 +1,9 @@
-[funfacts]
-title = "Wikipedia — did you know?"
-url = "https://en.wikipedia.org/wiki/Main_Page"
-entrySelector = "#mp-dyk > ul li"
-titleSelector = "b"
-linkSelector = "b a"
-
-[wikivoyage]
-title = "Wikivoyage recommendations"
-url = "https://en.wikivoyage.org/wiki/Main_Page"
-entrySelector = ".jcarousel-wrapper .jcarousel-item"
-titleSelector = "h2"
-linkSelector = "h2 a"
+[veux_pe]
+title = "PixelExperience for Redmi Note 11 Pro 5G (veux)"
+url = "https://download.pixelexperience.org/veux"
+entrySelector = '[data-version="thirteen_plus"] .package__data .accordion_tab'
+titleSelector = '.download__meta li:nth-child(2)'
+linkSelector = ".device__support a:nth-child(1)"
+contentSelector = ".changelogs__list"
+dateSelector = ".date"
+dateFormat = "yyyy/MM/dd"
