--- a/feeds.toml
+++ b/feeds.toml
@@ -7,3 +7,4 @@ linkSelector = ".device__support a:nth-child(1)"
 contentSelector = ".changelogs__list"
 dateSelector = ".date"
 dateFormat = "yyyy/MM/dd"
+waitUntil = "networkidle"
